[package]
name = "monarch_hixl"
version = "0.0.0"
authors = ["Meta"]
edition = "2021"
license = "BSD-3-Clause"

[lib]
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.86"
futures = { version = "0.3.31", features = ["async-await", "compat"] }
hyperactor = { version = "0.0.0", path = "../hyperactor" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
libc = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

